tests/type-errors/no_effect_local_var_in_formula.arl
archetype shadow_field

asset myasset {
  id: string;
} shadow {
  s: int = 0;
} with {
  a1: s >= 0
}

action exec (k : pkey of myasset) {
  specification {
    postcondition s1 {
      m.s = 2
    }
  }
  effect {
    var m : myasset = {id = k};
  }
}
